--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "colab-server",
-  "version": "1.0.0",
+  "name": "board-server",
+  "private": true,
+  "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
-    "ws": "^8.18.0"
+    "@fastify/cors": "^11.1.0",
+    "@fastify/jwt": "^10.0.0",
+    "@fastify/rate-limit": "^10.3.0",
+    "@fastify/sensible": "^6.0.3",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.6.1",
+    "fastify": "^5.2.1",
+    "firebase-admin": "^13.4.0",
+    "zod": "^3.24.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
+    "@types/node": "^24.3.0",
     "@types/ws": "^8.5.13",
-    "tsx": "^4.19.2",
+    "prisma": "^6.2.1",
+    "tsx": "^4.20.0",
     "typescript": "~5.9.3"
   }
 }
+
