--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ dist-ssr
 .env
 .env.local
 
+# Firebase Admin service account keys (NEVER commit)
+server/serviceAccount*.json
+server/.serviceAccount*.json
+server/.env
+server/.env.*
+**/*firebase-adminsdk*.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
