--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,13 @@
     "@fastify/jwt": "^10.0.0",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/sensible": "^6.0.3",
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.6.1",
     "fastify": "^5.2.1",
     "firebase-admin": "^13.4.0",
-    "zod": "^3.24.1",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
@@ -31,4 +32,3 @@
     "typescript": "~5.9.3"
   }
 }
-
